--- a/playlist-finder/index.html
+++ b/playlist-finder/index.html
@@ -12,15 +12,13 @@
       <h1 id="header">WWC Workshop - Fan Finder</h1>
     </header>
     <main>
-      <div>
+      <div class="mainHeader">
         <div>
           <label for="fanDid">Fan DID</label>
           <input id="fanDid" />
-          <div>
-            <span id="fanDidError"></span>
-          </div>
+          <button id="getFanPlaylistButton" disabled>Get</button>
+          <span id="fanDidError"></span>
         </div>
-        <button id="getFanPlaylistButton" disabled>Get</button>
       </div>
       <div>
         <ul id="trackList"></ul>
