--- a/playlist-maker/index.html
+++ b/playlist-maker/index.html
@@ -13,7 +13,7 @@
       <button id="copyDidButton">Copy your DID</button>
     </header>
     <main>
-      <div>
+      <div class="mainHeader">
         <img id="albumCover" />
         <div>
           <h2 id="albumName"></h2>
