Add loading screen

--- a/playlist-finder/index.html
+++ b/playlist-finder/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <div id="loading">Loading Web5...</div>
     <header>
       <h1 id="header">WWC Workshop - Fan Finder</h1>
     </header>
