--- a/playlist-maker/index.html
+++ b/playlist-maker/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <div id="loading">Getting Web5 ready...</div>
     <header>
       <h1 id="header">WWC Workshop - Tidal x Web5</h1>
       <button id="copyDidButton">Copy your DID</button>
