Invert playlist-finder styles

--- a/playlist-finder/index.html
+++ b/playlist-finder/index.html
@@ -16,7 +16,7 @@
       <div class="mainHeader">
         <div>
           <label for="fanDid">Fan DID</label>
-          <input id="fanDid" />
+          <input id="fanDid" placeholder="Enter DID here" />
           <button id="getFanPlaylistButton" disabled>Get</button>
           <span id="fanDidError"></span>
         </div>
