--- a/playlist-maker/index.html
+++ b/playlist-maker/index.html
@@ -9,22 +9,26 @@
 
   <body>
     <div id="loading">Getting Web5 ready...</div>
-    <header>
-      <h1 id="header">WWC Workshop - Tidal x Web5</h1>
-      <button id="copyDidButton">Copy your DID</button>
-    </header>
-    <main>
-      <div class="mainHeader">
-        <img id="albumCover" />
-        <div>
-          <h2 id="albumName"></h2>
-          <h3 id="artistName"></h3>
+    <div id="content" style="display: none">
+      <header>
+        <h1 id="heading">Free your playlist</h1>
+        <button id="copyDidButton">Copy your DID</button>
+      </header>
+      <main>
+        <div id="mainContent">
+          <div id="mainHeader">
+            <img id="albumCover" />
+            <div>
+              <h2 id="albumName"></h2>
+              <h3 id="artistName"></h3>
+            </div>
+          </div>
+          <div>
+            <ul id="trackList"></ul>
+          </div>
         </div>
-      </div>
-      <div>
-        <ul id="trackList"></ul>
-      </div>
-    </main>
+      </main>
+    </div>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
